✨ Inclusão de novas rotas relacionada aos agendamentos
